Hice el backend del Login, agregue uns excepsion de error si ambos campos estan vacios, e inicie el backend de Usuarios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.InventarioApp">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--Las Vistas que se veran despues del Inicio de Sesion correcto-->
+        <activity
+            android:name=".ui.usuarios.UsuariosActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
