Agregue muchas cosas que ya no me acuerdo, agregue la vista principal de los admin, y otros detalles mas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,12 @@
 
         <!--Las Vistas que se veran despues del Inicio de Sesion correcto-->
         <activity
-            android:name=".ui.usuarios.UsuariosActivity"
-            android:exported="true" />
+            android:name=".MainActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".AdminActivity"
+            android:exported="false" />
 
     </application>
 
