--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".AdminActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".ui.categorias.CategoriasActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
