--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:exported="false" />
 
         <activity
+            android:name=".EmpleadosActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ui.categorias.CategoriasActivity"
             android:exported="false" />
 
